--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
     background-size: cover;
     
 }
-.logo, .allcoutry {
-    display: inline;
+header{
+    display: flex;
+    
+    
+}
+.allcountry, .pais{
+    display: inline-flex;
+    align-items: center;
 }
