--- a/styele.css
+++ b/styele.css
@@ -29,7 +29,7 @@ main{
 
 #texto{
     position: relative;
-    left: 10%;
+    left: 17%;
     width: 35%;
     height: 3em;
     margin-top: 15%;
@@ -38,7 +38,7 @@ main{
 
 #texto2{
     position: relative;
-    left: -10%;
+    left: -15%;
     width: 35%;
     height: 3em;
     margin-top: 20%;
@@ -56,19 +56,18 @@ main button{
     height: 6%;
     width: 8%;
     position: relative;
-    left: -24%;
-    bottom: -56%;
-    border: solid 3px gray;
-    border-radius: 10%;
+    left: -45%;
+    bottom: -46%;
+    border-radius: 5rem;
 }
 
 main #publicidade{
     background-color: brown;
     position: relative;
-    right: -20%;
+    right: 5%;
     height: 40%;
     width: 30%;
-    margin-top: 15%;
+    margin-top: 12%;
     border: solid 3px gray;
     border-radius: 5%;
 }
