--- a/style.css
+++ b/style.css
@@ -13,10 +13,25 @@
 }
 header{
     display: flex;
-    
+    padding-left: 45%;
     
 }
 .allcountry, .pais{
     display: inline-flex;
-    align-items: center;
+    
+}
+.Login{
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 45%;
+    
+}
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    position: relative;
+    
 }
