--- a/styele.css
+++ b/styele.css
@@ -10,11 +10,28 @@ body{
 
 header{
     color: white;
-    display: inline-flex;
+    display: inline-block;
     background-color: aqua;
-    padding: 0;
     height: 75px;
-    width: 100%;  
+    width: 100%;
+    padding: 20px 0;
+}
+
+nav{
+    position: absolute;
+    display: inline-flex;
+    align-content: flex-end;
+    width: 90%; 
+}
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+ul{
+    width: 4em;
+    justify-self: right;
 }
 
 main{
@@ -30,7 +47,7 @@ main{
 #texto{
     position: relative;
     left: 17%;
-    width: 35%;
+    width: 30%;
     height: 3em;
     margin-top: 15%;
     text-align: center;
