--- a/style.css
+++ b/style.css
@@ -21,12 +21,32 @@ header{
     
 }
 .Login{
-    height: 20%;
+    height: 45vh;
+    width: 25%;
     display: flex;
     flex-direction: column;
     position: relative;
-    left: 45%;
-    
+    left: 40%;
+    background-color: rgba(10,23,55,0.5);
+    top: 150px;   
+    padding-left: 10px;
+    padding-top: 20px;
+    border-radius: 10%;
+}
+.login, input{
+    height: 40px;
+    width: 90%;
+    padding-left: 10px;
+    border-radius: 15px;
+    border: none;
+}
+.button-login{
+    width: 90%;
+    height: 3vw;
+    border-radius: 20px;
+    border: none;
+    position: relative;
+    top: 15px;
 }
 form{
     display: flex;
@@ -34,4 +54,13 @@ form{
     gap: 15px;
     position: relative;
     
+}
+.registro{
+    position: relative;
+    top: 20%;
+    display: flex;
+    flex-direction: column;
+}
+.registro p{
+    color: #ffffff;
 }
