--- a/style.css
+++ b/style.css
@@ -1,66 +1,88 @@
-*{
+body{
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	font-family: 'Jost', sans-serif;
+	background: linear-gradient(to bottom, #0f0c29, #6453fb, #19195b);
 }
-.backgroud img{
-    z-index: -2;
+.main{
+    width: 350px;
+    height: 500px;
+    background: rgb(2, 1, 35);
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 5px 20px 50px #000;
+}
+#chk{
+    display: none;
+}
+.signup{
+    position: relative;
     width: 100%;
     height: 100%;
-    position: fixed;
-    background-size: cover;
-    
 }
-header{
+label{
+    color: #fff;
+    font-size: 2.3em;
+    justify-content: center;
     display: flex;
-    padding-left: 45%;
-    
+    margin: 60px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: .5s ease-in-out;
 }
-.allcountry, .pais{
-    display: inline-flex;
-    
-}
-.Login{
-    height: 45vh;
-    width: 25%;
+input{
+    width: 60%;
+    height: 60%;
+    background: #e0dede;
+    cursor: pointer;
     display: flex;
-    flex-direction: column;
-    position: relative;
-    left: 40%;
-    background-color: rgba(10,23,55,0.5);
-    top: 150px;   
-    padding-left: 10px;
-    padding-top: 20px;
-    border-radius: 10%;
+    margin: 20px auto;
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
 }
-.login, input{
+button{
+    width: 60%;
     height: 40px;
-    width: 90%;
-    padding-left: 10px;
-    border-radius: 15px;
+    margin: 10px auto;
+    justify-content: center;
+    display: block;
+    color: #fff;
+    background: #5757ee;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 20px;
+    outline: none;
     border: none;
+    border-radius: 5px;
+    transition: .2s ease-in;
+    cursor: pointer;
 }
-.button-login{
-    width: 90%;
-    height: 3vw;
-    border-radius: 20px;
-    border: none;
-    position: relative;
-    top: 15px;
+button:hover{
+	background: #2229ba;
 }
-form{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    position: relative;
-    
+.login{
+    height: 460px;
+    background: #eee;
+    border-radius: 60% / 10%;
+    transform: translateY(-180px);
+    transition: .8s ease-in-out;
 }
-.registro{
-    position: relative;
-    top: 20%;
-    display: flex;
-    flex-direction: column;
+.login label{
+    color: #2b24b7;
+    transform: scale(.6);
 }
-.registro p{
-    color: #ffffff;
+#chk:checked ~ .login{
+	transform: translateY(-500px);
+}
+#chk:checked ~ .login label{
+	transform: scale(1);	
+}
+#chk:checked ~ .signup label{
+	transform: scale(.6);
 }
