--- a/gestao_canal.css
+++ b/gestao_canal.css
@@ -1,11 +1,52 @@
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-
 body{
-    height: 100vh;
+    background: linear-gradient(150deg,  #e4650b, #2000f3 );
+    background-size: 100vw 100vh;
+}
+
+header{
+    background: linear-gradient(150deg, #f37831, #2626a7);
+    display: inline-flex;
+    width: 100vw;
+    height: 10vh;
+    justify-content: space-between;
+}
+
+input{
+    height: 5.9vh;
+    width: 20vw;
+    position: relative;
+    left: 40em;
+    top: .8em;
+    border-radius: 10px;
+    padding-left: 15px;
+    border: none;
+    outline: none;
+}
+
+.lupa{
+    position: relative;
+    top: 1.3em;
+    width: 25px;
+    left: 35em;
+    cursor: pointer;
+}
+
+.icons{
+    position: relative;
+    right: 8em;
+    top: 1em;
+}
+
+.icons img{
+    cursor: pointer;
+    width: 4.4vw;
+    padding-left: 1.8em;
+    font-size: 5px;
 }
 
 nav.side{
