--- a/login.css
+++ b/login.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
 	padding: 0;
@@ -5,6 +6,10 @@ body{
 	font-family: 'Jost', sans-serif;
     background: url(https://t3.ftcdn.net/jpg/00/88/49/94/360_F_88499441_LrtJZdMJ0fOvbsWk5e5ArohbcuvIPgxa.jpg);
     background-size: 100vw 100vh;
+    
+}
+.corpo{
+    filter: blur(5px);
 }
 
 header{
@@ -62,6 +67,7 @@ input{
     border: none;
     outline: none;
     border-radius: 5px;
+    
 }
 button{
     width: 60%;
@@ -122,6 +128,7 @@ a{
     background-size: 100vw 100vh;
     border-radius: 10px;
     visibility: hidden;  
+    
 }
 .rocover-box form img{
     width: 2vw;
