--- a/usuarios.css
+++ b/usuarios.css
@@ -126,7 +126,7 @@ main .dono-da-conta img{
     cursor: pointer;
 }
 .acc-1 button{
-    
+
 }
 .acc-2{
     display: flex;
@@ -164,16 +164,19 @@ main .dono-da-conta img{
     margin-left: 0.3vw;
 }
 
-.acc-3 .button-log-out{
+.button-log-out{
     width: 7.5vw;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
    border: none;
    cursor: pointer;
-   padding-bottom: 1.5vh;
+   padding-bottom: 0.8vw;
+   font-size: 1vw;
+   text-align: center;
 }
 .acc-3 .button-log-out img{
     position: relative;
+    height: 3.5vh;
     top: 0.4vw;
     right: 3vh;
 }
