--- a/css/usuarios.css
+++ b/css/usuarios.css
@@ -20,30 +20,30 @@ input{
     height: 5.9vh;
     width: 20vw;
     position: relative;
-    left: 12vh;
-    top: .8vw;
+    left: 120px;
+    top: 8px;
     border-radius: 10px;
     padding-left: 15px;
     border: none;
     outline: none;
-    font-size: 2.3vh;
+    font-size: 16px;
 }
 .lupa{
     position: relative;
     top: 3vh;
     width: 2vw;
-    left: 13vh;
+    left: 130px;
     cursor: pointer;
 }
 .icons{
     position: relative;
-    right: 12vh;
+    right: 80px;
     top: 1.6vw;
 }
 .icons img{
     cursor: pointer;
-    width: 4.4vw;
-    padding-left: 5vh;
+    width: 60px;
+    padding-left: 30px;
 }
 main{
     display: flex;
@@ -54,34 +54,35 @@ main{
 main h1{
     margin: 2vw;
     position: relative;
-    right: 2.5vw;
+    right: 45px;
 }
 .dono-da-conta{
     display: flex;
     flex-direction: column;
     gap: 3vh;
     position: relative;
-    right: 2vw;
+    left: 16px;
+    
 }
 main .dono-da-conta img{
     width: 10vw;
     object-fit: cover;
     position: relative;
-    left: 4vw;
+    left: 100px;
 
 }
 .dono-da-conta input{
     position: relative;
-    left: -0.5vw;
-    font-size: 2.3vh;
+    left: 40px;
+    font-size: 16px;
 }
 .dono-da-conta button{
     position: relative;
     width: 15vw;
     height: 6vh;
-    top: 2vh;
-    left: 2vw;
-    font-size: 20px;
+    top: 18px;
+    left: 70px;
+    font-size: 16px;
     border-radius: 10px;
     border: none;
     background-color: #423ffc;
@@ -89,18 +90,18 @@ main .dono-da-conta img{
 }
 .dono-da-conta button:hover{
     background-color: #6563fb;
-    font-size: 2.4vh;
+    font-size: 18px;
 }
 .dono-da-conta button:active{
     background-color: #8d8bfe;
-    font-size: 2.4vh;
+    font-size: 20px;
 }
 .configuracao-da-conta{
     width: 18vw;
     height: 40vh;
     position: relative;
-    left: 35vw;
-    bottom: 70vh;
+    left: 425px;
+    bottom: 440px;
     background-color: rgb(211, 230, 247);
     border-radius: 10px;
     padding-top: 1vw;
@@ -112,7 +113,7 @@ main .dono-da-conta img{
 }
 .acc-1 p{
     position: relative;
-    left: 4vw;
+    left: 30px;
     font-size: 2.3vh;
 }
 .acc-1 button {
@@ -121,23 +122,25 @@ main .dono-da-conta img{
     border-radius: 15px;
     border: none;
     position: relative;
-    left: 12vw;
+    left: 160px;
     bottom: 1vh;
     cursor: pointer;
 }
-.acc-1 button{
-
+.acc-1 button img{
+    width: 2vw;
 }
 .acc-2{
     display: flex;
     flex-direction: column;
     position: relative;
-    left: 5vw;
+    left: 50px;
     
 }
 .acc-2 img{
     height: 10vh;
     width: 8vw;
+    position: relative;
+    left: 12px;
     object-fit: contain;
 }
 .acc-2 p{
@@ -153,19 +156,22 @@ main .dono-da-conta img{
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
-    font-size: 17px;
-    padding-bottom: 1vw;
-    padding-right: 1vw;
+    width: 9.7em;
+    font-size: 12px;
+    padding-bottom: 1px;
+    padding-right: 1px;
+    text-align: center;
 }
 .acc-3  .button-adc-acc img{
     position: relative;
-    top: 1vh;
+    top: 1px;
+    width: 15px;
     margin-right: 0.3vw;
     margin-left: 0.3vw;
 }
 
 .button-log-out{
-    width: 7.5vw;
+   width: 8em;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
    border: none;
@@ -189,11 +195,11 @@ main .dono-da-conta img{
 }
 .config-acc{
     position: relative;
-    top: 3vh;
-    left: 4.9vw;
-    width: 8vw;
+    top: 17px;
+    left: 35px;
+    width: 12vw;
     height: 4vh;
-    font-size: 16px;
+    font-size: 2.5vh;
     font-weight: 500;
     border-radius: 10px;
     border: 1px solid #0000ff;
